# rust-ai-infra

./: .containerignore  .gitignore  Cargo.toml  JustFile  Justfile  dev.sh  docker-compose.yml
.devcontainer/: Containerfile
agent-core/: Cargo.toml  Containerfile
agent-core/migrations/: 20240524_create_tx_analysis.sql
agent-core/src/: main.rs
agent-core/src/agent/: llm.rs  mod.rs  processor.rs
agent-core/src/db/: init.rs  mod.rs  write.rs
mcp-engine/: Cargo.toml
migrations/: 20250526182915_create_tx_analysis_table.sql
rag-retriever/: Cargo.toml
service-api/: Cargo.toml  Containerfile
