# Check what's in the corrupted Cargo.toml

# Fix it by creating a proper Cargo.toml
[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = "0.34"
reqwest = { version = "0.11", features = ["json", "blocking"] }
futures-util = "0.3"
futures = "0.3"
